--- a/Ecommerce-backend/src/main/resources/application.properties
+++ b/Ecommerce-backend/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db
+spring.datasource.username=xixijiang
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.platform=postgresql
+spring.jpa.show-sql=true
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=update
+
+ecommerce.jwt.secretKey=EcommerceSecret
+ecommerce.jwt.expirationTime=864000
