--- a/Ecommerce-backend/src/main/resources/application.properties
+++ b/Ecommerce-backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.platform=postgresql
 spring.jpa.show-sql=true
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 ecommerce.jwt.secretKey=EcommerceSecret
 ecommerce.jwt.expirationTime=86400
